<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.views.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_right"
            app:exitAnim="@anim/slide_left"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.views.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_right"
            app:exitAnim="@anim/slide_left"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.views.InstructionsFragment"
        android:label="@string/get_started"
        tools:layout="@layout/fragment_instructions" >
        <action
            android:id="@+id/action_instructionsFragment_to_listOfShoesFragment"
            app:destination="@id/listOfShoesFragment"
            app:popUpTo="@id/instructionsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/listOfShoesFragment"
        android:name="com.udacity.shoestore.views.ListOfShoesFragment"
        android:label="@string/all_shoes"
        tools:layout="@layout/fragment_list_of_shoes" >
        <action
            android:id="@+id/action_listOfShoesFragment_to_addNewShoeFragment"
            app:destination="@id/addNewShoeFragment" />
        <action
            android:id="@+id/action_listOfShoesFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addNewShoeFragment"
        android:name="com.udacity.shoestore.views.AddNewShoeFragment"
        android:label="@string/add_new_shoe"
        tools:layout="@layout/fragment_add_new_shoe" >
        <action
            android:id="@+id/action_addNewShoeFragment_to_listOfShoesFragment"
            app:destination="@id/listOfShoesFragment" />
    </fragment>
</navigation>