<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.LoginFragment"
        android:background="@color/colorSecondary">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_gravity="top"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scrollView"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_label"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email_input"
                style="@style/TextEditField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:labelFor="@id/email_label" />

            <TextView
                android:id="@+id/password_label"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/miduem_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_input"
                style="@style/TextEditField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:labelFor="@id/password_label" />

            <Button
                android:id="@+id/login_btn"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:text="@string/login" />

            <Button
                android:id="@+id/sign_up"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/miduem_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginBottom="@dimen/large_margin"
                android:text="@string/sign_up" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

